# RAG_embeddings

./: .env.example  .gitignore  README.md  pyproject.toml
src/semantic_index/: __init__.py  cli.py
src/semantic_index/config/: settings.py
src/semantic_index/db/: init_db.py  repository.py  schema.sql
src/semantic_index/pipeline/: batch_embedder.py  embedder.py  normalizer.py  source_reader.py  tokenizer.py  types.py  validator.py  vector_store.py  window_builder.py
tests/: conftest.py  test_build_runner.py  test_vector_store.py  test_window_builder.py
